[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossbeam = "0.8.1"
image = "0.23.14"
num = "0.4.0"
rstest = "0.11.0"
structopt = "0.3.21"
log = "0.4.14"
env_logger = "0.9.0"