[package]
name = "minigrep"
version = "0.1.0"
authors = ["devforfu <developer.z@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
structopt = "0.3.21"
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.8.4"